syntax = "proto3";

package go.micro.srv.user;

service UserSrv {
	// 登录
	rpc Login(LoginRequest) returns (LoginResponse) {}
	// 获取用户
	rpc User(UserRequest) returns (UserResponse) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}


message LoginRequest {
	string account = 1;
	string password = 2;
}

message LoginResponse {
	UserResponse user = 1;
}

message UserRequest {
	int64 id = 1;
}

message UserResponse {
	int64 id = 1;
	string name = 2;
	int64 gender = 3;
	string createAt = 4;
	string avatar = 5;
	string emial = 6;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
